[gd_scene load_steps=5 format=3 uid="uid://duk7ha7p415ep"]

[ext_resource type="Script" path="res://entities/MusicController/MusicController.gd" id="1_355ip"]
[ext_resource type="AudioStream" uid="uid://dd1oldhs4312d" path="res://music/Sonic 1 Music Drowning.ogg" id="2_60qh1"]
[ext_resource type="AudioStream" uid="uid://c3qc4cj04sqdu" path="res://music/Sonic The Hedgehog OST - Scrap Brain Zone.ogg" id="3_kj4wx"]
[ext_resource type="AudioStream" uid="uid://b7a2qcdide2k7" path="res://music/ActClear.ogg" id="3_y4fd3"]

[node name="MusicController" type="Node"]
script = ExtResource("1_355ip")

[node name="MusicDrowning" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_60qh1")
bus = &"Music"
playback_type = 1

[node name="MusicActClear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y4fd3")
bus = &"Music"

[node name="MusicActiveTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kj4wx")
bus = &"Music"
playback_type = 1

[connection signal="finished" from="MusicActClear" to="." method="_on_music_act_clear_finished"]
